--- a/src/Components/NavBar/NavBar.scss
+++ b/src/Components/NavBar/NavBar.scss
@@ -27,7 +27,7 @@
       color: var(--light-color);
       background-color: var(--primary-color);
       text-decoration: none;
-      border-radius: var(--navBar-btn-b-radius);
+      border-radius: var(--primary-border-radius);
       margin-right: 10px;
     }
     .navBar__link:last-child {
