--- a/src/Components/Post/Post.scss
+++ b/src/Components/Post/Post.scss
@@ -3,12 +3,13 @@
   display: flex;
   margin: 0 auto;
   border: solid var(--primary-border-color) 1px;
-  min-height: 550px;
+  min-height: 570px;
   border-radius: var(--primary-border-radius);
   overflow: hidden;
   @media (max-width: 980px) {
     flex-direction: column;
-    max-width: 100%;
-    margin: 0 auto 0 auto;
+    max-width: 600px;
+    margin: 20px auto 0 auto;
+    min-height: auto;
   }
 }
