--- a/src/Components/ProfileDetails/ProfileDetails.scss
+++ b/src/Components/ProfileDetails/ProfileDetails.scss
@@ -65,6 +65,11 @@
   &__fullname {
     text-transform: capitalize;
     font-weight: 700;
+    @media (max-width: 980px) {
+      display: block;
+      width: 100%;
+      text-align: center;
+    }
   }
   &__bio {
     margin-top: 20px;
