--- a/src/_globals.scss
+++ b/src/_globals.scss
@@ -58,6 +58,8 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 a {
